# ESCape32-WiFi-Link

./: .gitignore  CMakeLists.txt  README.md  mock_server.py  sdkconfig.defaults  test_mock.py
linux_build/: Makefile.linux  build_defs.h  embed_files.py  esp_idf_shims.h  linux_httpd.c  linux_main.c  main.c  mock_uart.h  test_ws.c
main/: CMakeLists.txt  main.c  root.html  root_de.json  root_en.json  root_fr.json  root_it.json  root_ru.json  root_zh.json
mock_presets/: foo.json  foob.json  wifi.json
